<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main_submission"
    tools:context="com.nikmc.kc.SubmissionForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSendMessage"
        android:layout_marginBottom="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:id="@+id/MessageForm">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_fio_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_fio"
                    android:inputType="textFilter|textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/margin_Top_edit_Login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_telephone_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="+7"
                        android:focusable="false"
                        android:clickable="false"
                        android:padding="@dimen/padding"
                        android:background="@color/material_grey_300"
                        android:layout_marginTop="@dimen/margin_Top_edit_Login"/>


                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_telephone"
                        android:inputType="number"
                        android:hint="@string/hint_phone"
                        android:textColorHint="#ffe0e0e0"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:padding="@dimen/padding"
                        android:background="@drawable/edt_border"
                        android:layout_marginTop="@dimen/margin_Top_edit_Login"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_city_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <AutoCompleteTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/margin_Top_edit_Login"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_street_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <AutoCompleteTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_street"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/margin_Top_edit_Login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_house_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <AutoCompleteTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_house"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/margin_Top_edit_Login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/text_message"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_Top_text_Login"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_message"
                    android:inputType="textMultiLine|text"
                    android:gravity="top"
                    android:lines="5"
                    android:padding="@dimen/padding"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/margin_Top_edit_Login"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="start"
                android:layout_below="@+id/MessageForm">

                <ImageButton
                    android:layout_height="@dimen/imageSize"
                    android:layout_width="@dimen/imageSize"
                    android:src="@drawable/ic_add_image"
                    android:id="@+id/Image1"/>
                <ImageButton
                    android:layout_height="@dimen/imageSize"
                    android:layout_width="@dimen/imageSize"
                    android:src="@drawable/ic_add_image"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/Image2"/>
                <ImageButton
                    android:layout_height="@dimen/imageSize"
                    android:layout_width="@dimen/imageSize"
                    android:src="@drawable/ic_add_image"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/Image3"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btnSendMessage"
        android:textColor="@color/white"
        android:background="@color/green"
        android:text="@string/btn_SendMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
